--- a/project.css
+++ b/project.css
@@ -1,17 +1,31 @@
 h1 {
-    font-style: italic;
     text-align: center;
-    background-color: rgb(84, 236, 206);
-    color:deeppink;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #0a0a0a;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+select,button{
+  min-height: 2.5rem;
+  background-color: rgba(0,0,0,.25);
+  border-radius: 12px;
+  padding: 2rem 3rem;
+  box-shadow: 0 5px 20px 2px rgba(34,60,80,.2);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  position: relative;
+  z-index: 1000;
 }
 
 table{
     width: 100%;
     border-collapse: collapse;
+    table-layout: fixed;
   }
   
   table tr *:nth-child(1){
-    background: #0e45ea;
+    background: #718feb;
   }
   
   table tr *:nth-child(2){
@@ -26,8 +40,11 @@ table{
     padding: 10px 0;
   }
 
+
 body {
-    background-image: url(Weather1.jpg);
+  background-image: url(cloud.jpg);
+  background-repeat:no-repeat;
+  background-size:cover;
 }
 
 div#picdisplay {
